# compare_competencies

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MakeFile  NOTES.md  README.md  alembic.ini  backup-volumes.sh  check_issues.py  check_krm.py  check_login.py  check_main_project.py  check_rpd_links.py  check_skill_source.py  check_summary.py  docker-compose.prod.yml  docker-compose.yml  logs.sh  main.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  seed_users.py  temp_check.py  test_apg.py  test_debug.py  test_login3.py  test_login_full.py  test_nocache.py  update-deployment.sh  user_manual.md  users.json  uvi_err.txt  uvi_out.txt  validate-config,sh  Запуск Докера.md  Метрики.md
.github/workflows/: deploy.yml  load-test.yml
.mimocode/plans/: 1782666444670-eager-cactus.md  1782780609262-clever-comet.md  1782904901426-playful-moon.md  full-audit-report.md
alembic/: README  env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  90d02040d3d1_add_parsed_skills_to_vacancies.py  add_audit_fixes.py  add_directions_and_supervisors.py  add_llm_tables.py  initial_schema.py  merge_branches.py  remove_non_it_disciplines.py
data/: it_skills.json  skill_taxonomy.json
data/embeddings/: market_embeddings_senior.pkl
data/history/: freq_2026-04-13.json  freq_2026-04-15.json  freq_2026-04-26.json  freq_2026-05-06-123139.json  (+139 more)
docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  ROADMAP.md  teacher_labeling_task.md  user_manual.md
frontend/: Dockerfile  api_vacancies_endpoint.py  app.py  index.html  nginx.conf  package-lock.json  package.json  pipeline.bat  vite.config.ts
init-scripts/: 01-init.sql
notebook_jypiter/: 01_hh_analysis.ipynb  02_competecy_matching.ipynb  02_competency_matching.ipynb  03_prediction_model.ipynb
prometheus/: prometheus(файл для данных в проекте).yml  prometheus.yml
scripts/: check_clusters.py  check_json_bytes.py  check_oop.py  check_oop2.py  check_opop.py  check_rpd_data.py  check_zero.py  clean_with_validator.py  create_user.py  download_rpd.py  examine_headers.py  examine_pages.py  examine_pdf.py  export_json.py  extend_it_skills.py  final_parser.py  final_stats.py  fix_tests.py  full_rebuild.py  generate_embeddings.py  import_students.py  merge_parent.py  rebuild_with_ksa.py  recover_zero.py  rerun_parser.py  seed_db.py  send_notify.ps1  train_clusters.py
sql/: 001_create_krm_schema.sql  002_audit_fixes.sql  002_competency_hierarchy.sql  002_search_runs.sql  003_vacancies.sql  004_llm_recommendations.sql  006_market_skill_mappings_drop.sql
src/: __init__.py  __init__.py,cover  api.py  artifacts.py  artifacts.py,cover  cache_manager.py  cache_manager.py,cover  config.py  config.py,cover  database.py  database.py,cover  db.py  db.py,cover  decorators.py  decorators.py,cover  di.py  di.py,cover  errors.py  errors.py,cover  logging_config.py  model_registry.py  model_registry.py,cover  result.py  result.py,cover  retry.py  retry.py,cover  utils.py  utils.py,cover
src/api_pkg/: deps.py  (+11 more)
temp/: analyze_skills.py  bullet_debug.txt  check_zero.py  done.txt  done_notification.txt  eng_pdf_check.txt  examine.txt  final.txt  final2.txt  final3.txt  final4.txt  final_stats.txt  headers.txt  json_bytes.txt  json_check.txt  merge.txt  oop_check.txt  oop_check2.txt  pages.txt  pl_issues.txt  quality_analysis.txt  quality_check.txt  recover.txt  regex_test.txt  regex_test2.txt  rerun.txt  rerun2.txt  rerun3.txt  rerun4.txt  sec_debug.txt  section_check.txt  section_check2.txt  section_check3.txt  section_check4.txt  still_missing.txt  zero_check.txt
tests/: conftest.py  test_artifacts.py  test_cache_manager.py  test_decorators.py  test_di.py  test_errors_frozen.py  test_logging_config.py  test_monitoring.py  test_n8n.py  test_n8n_auth.py  test_n8n_webhooks.py  test_parsers.py  test_result.py  test_retry.py  test_shap_integration.py  test_snapshots.py  test_utils.py  test_utils_extended.py  test_vector_search.py
visualisation/: charts.py
(+639 files in other folders)
