[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "compare-competencies"
version = "3.0.0"
description = "Comparison of educational competencies with hh.ru job vacancies"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pydantic.v1.deprecation.PydanticDeprecatedSince20",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration",
]

[tool.coverage.run]
omit = [
    "src/api.py",
    "src/logging_config.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unused_ignores = true

# Third-party stubs
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "pandas", "numpy", "matplotlib.*", "seaborn", "sklearn.*",
    "tqdm", "joblib", "pymorphy3", "rank_bm25", "requests",
    "hdbscan", "shap", "fastapi.*", "pydantic.*", "slowapi.*",
    "structlog",
]
ignore_missing_imports = true
