[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "compare-competencies"
version = "3.0.0"
description = "Comparison of educational competencies with hh.ru job vacancies"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "prophet>=1.1",
    "prometheus-client>=0.19",
    "slowapi>=0.1",
    "structlog>=24.0",
    "httpx>=0.27",
    "sentence-transformers>=2.5",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "tqdm>=4.66",
    "joblib>=1.3",
    "rank-bm25>=0.2",
    "hdbscan>=0.8",
    "shap>=0.44",
    "pymorphy3>=2.0",
    "pgvector>=0.2",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pydantic.v1.deprecation.PydanticDeprecatedSince20",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration",
]

[tool.coverage.run]
omit = [
    "src/logging_config.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unused_ignores = true

ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "pandas", "numpy", "matplotlib.*", "seaborn", "sklearn.*",
    "tqdm", "joblib", "pymorphy3", "rank_bm25", "requests",
    "hdbscan", "shap", "fastapi.*", "pydantic.*", "slowapi.*",
    "structlog",
]
